--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar"
+    android:background="#0E4C77"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -27,8 +27,9 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:textColor="#fff"
         android:gravity="center"
-        android:textSize="16sp"
-        android:text="برنامج المسح الميداني"
+        android:textSize="20sp"
+        android:text="اهلا بك فى يونيكوم"
+        android:fontFamily="Tajawal"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
 
