--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -7,17 +7,22 @@
 
         <item
             android:id="@+id/nav_list"
-            android:icon="@drawable/ic_list_name"
+            android:icon="@drawable/viewicon"
             android:title="عرض البيانات المسجله"/>
         <item
             android:id="@+id/nav_add_new"
-            android:icon="@drawable/ic_add_room"
+            android:icon="@drawable/newicon"
             android:title="المعاينة الميدانية" />
 
         <item
             android:id="@+id/nav_change_project"
-            android:icon="@drawable/ic_import_export_black_24dp"
+            android:icon="@drawable/changeicon"
             android:title=" تغيير المشروع" />
+        <item
+            android:id="@+id/nav_comment"
+            android:icon="@drawable/commenticon"
+            android:title="التعليقات على المشاريع" />
+
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_logout"
