--- a/app/src/main/res/layout/activity_new_ui_survey_screen.xml
+++ b/app/src/main/res/layout/activity_new_ui_survey_screen.xml
@@ -55,15 +55,15 @@
     <Spinner
         android:layout_marginTop="20dp"
         android:id="@+id/spinnerCities"
-        android:layout_width="260dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginRight="420dp"
+        android:layout_marginRight="400dp"
         android:layout_marginBottom="8dp"
         />
 
 
     <ImageView
-        android:layout_marginRight="670dp"
+        android:layout_marginRight="640dp"
         android:id="@+id/imageView_add_new_city"
         android:layout_width="70dp"
         android:layout_height="80dp"
@@ -93,7 +93,7 @@
 
     <Spinner
         android:id="@+id/spinnerOffices"
-        android:layout_marginRight="420dp"
+        android:layout_marginRight="400dp"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
@@ -115,11 +115,10 @@
 
 
     <EditText
-        android:focusable="false"
         android:id="@+id/edit_mobile"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="420dp"
+        android:layout_marginStart="400dp"
         android:layout_marginTop="180dp"
         android:layout_marginBottom="8dp"
         android:ems="10"
@@ -189,7 +188,7 @@
     <TextView
 
 
-        android:layout_marginRight="420dp"
+        android:layout_marginRight="400dp"
         android:textColor="@color/colorPrimaryText"
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
@@ -281,7 +280,7 @@
 
         android:drawablePadding="15dp"
         android:drawableRight="@drawable/ic_wifiicon"
-        android:layout_marginRight="420dp"
+        android:layout_marginRight="400dp"
         android:id="@+id/edit_internet_speed"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
@@ -427,8 +426,27 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content" />
 
-    <LinearLayout
+
+    <EditText
+        android:editable="false"
+        android:focusableInTouchMode="false"
+        android:id="@+id/edit_from_N"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="830dp"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:editable="false"
+        android:focusableInTouchMode="false"
+        android:id="@+id/edit_to_N"
+        android:layout_marginRight="400dp"
+        android:layout_marginTop="830dp"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:layout_marginTop="890dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="1.5dp"
@@ -439,7 +457,8 @@
 
     <TextView
 
-        android:layout_marginTop="870dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="900dp"
         android:textColor="@color/colorPrimaryText"
         android:id="@+id/textView334"
         android:layout_width="wrap_content"
@@ -452,7 +471,7 @@
 
         <android.support.design.widget.TextInputLayout
             android:layout_marginRight="10dp"
-            android:layout_marginTop="920dp"
+            android:layout_marginTop="950dp"
             android:layout_width="350dp"
             android:layout_height="wrap_content">
 
@@ -466,7 +485,7 @@
 
     <android.support.design.widget.TextInputLayout
         android:layout_marginRight="400dp"
-        android:layout_marginTop="920dp"
+        android:layout_marginTop="950dp"
         android:layout_width="350dp"
         android:layout_height="wrap_content">
 
@@ -481,7 +500,7 @@
 
     <android.support.design.widget.TextInputLayout
         android:layout_marginRight="10dp"
-        android:layout_marginTop="1000dp"
+        android:layout_marginTop="1020dp"
         android:layout_width="350dp"
         android:layout_height="wrap_content">
 
@@ -495,7 +514,7 @@
 
     <android.support.design.widget.TextInputLayout
         android:layout_marginRight="400dp"
-        android:layout_marginTop="1000dp"
+        android:layout_marginTop="1020dp"
         android:layout_width="350dp"
         android:layout_height="wrap_content">
 
