--- a/app/src/main/res/layout/activity_saved_data_list.xml
+++ b/app/src/main/res/layout/activity_saved_data_list.xml
@@ -29,6 +29,7 @@
     android:layoutDirection="ltr"
     >
     <LinearLayout
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
