--- a/app/src/main/res/layout/activity_new_ui_survey_screen.xml
+++ b/app/src/main/res/layout/activity_new_ui_survey_screen.xml
@@ -52,43 +52,82 @@
         android:layout_marginBottom="8dp"
           />
 
-    <Spinner
-        android:layout_marginTop="20dp"
-        android:id="@+id/spinnerCities"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="400dp"
-        android:layout_marginBottom="8dp"
-        />
+   <LinearLayout
+       android:layout_marginRight="400dp"
+       android:layout_width="350dp"
+       android:layout_height="wrap_content"
+       android:layout_marginTop="20dp"
+       android:layout_marginBottom="8dp"
+       android:orientation="vertical">
+       <Spinner
+           android:id="@+id/spinnerCities"
+           android:layout_width="350dp"
+           android:layout_height="wrap_content"
+           android:layout_marginBottom="8dp"
+           />
+       <EditText
+
+           android:id="@+id/edt_other_cities"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:ems="10"
+           android:layout_marginTop="10dp"
+           android:background="@drawable/editback"
+           android:inputType="text"
+           android:maxLength="32"
+           android:hint="أضافة مدينة غير موجودة" />
 
 
-    <ImageView
-        android:layout_marginRight="640dp"
-        android:id="@+id/imageView_add_new_city"
-        android:layout_width="70dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:srcCompat="@drawable/ic_plusicon" />
+   </LinearLayout>
 
 
-    <Spinner
-        android:id="@+id/spinnerDistrict"
+    <!--<ImageView-->
+        <!--android:layout_marginRight="640dp"-->
+        <!--android:id="@+id/imageView_add_new_city"-->
+        <!--android:layout_width="70dp"-->
+        <!--android:layout_height="80dp"-->
+        <!--android:layout_marginTop="8dp"-->
+        <!--android:layout_marginBottom="8dp"-->
+        <!--app:srcCompat="@drawable/ic_plusicon" />-->
+
+
+    <LinearLayout
         android:layout_marginRight="20dp"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="8dp"
-         />
+        android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/imageView_add_new_district"
-        android:layout_width="70dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginRight="320dp"
+        <Spinner
+            android:id="@+id/spinnerDistrict"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            />
+        <EditText
+            android:id="@+id/edt_other_district"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/editback"
+            android:inputType="text"
+            android:maxLength="32"
+            android:hint="أضافة حي غير موجود" />
 
-        app:srcCompat="@drawable/ic_plusicon" />
+
+    </LinearLayout>
+
+
+    <!--<ImageView-->
+        <!--android:id="@+id/imageView_add_new_district"-->
+        <!--android:layout_width="70dp"-->
+        <!--android:layout_height="80dp"-->
+        <!--android:layout_marginTop="80dp"-->
+        <!--android:layout_marginRight="320dp"-->
+
+        <!--app:srcCompat="@drawable/ic_plusicon" />-->
 
 
     <Spinner
@@ -96,7 +135,7 @@
         android:layout_marginRight="400dp"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="150dp"
         android:layout_marginBottom="8dp"
         />
 
@@ -106,7 +145,7 @@
         android:id="@+id/edit_address"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="200dp"
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="العنوان"
@@ -119,7 +158,7 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="400dp"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="200dp"
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="رقم الهاتف"
