--- a/app/src/main/res/layout/roomitemcolored.xml
+++ b/app/src/main/res/layout/roomitemcolored.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_height="wrap_content"
-android:background="#fff"
-android:layout_width="match_parent"
-android:layoutDirection="rtl"
-android:orientation="horizontal"
-android:padding="10dp">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#fff"
+    android:layoutDirection="rtl"
+    android:orientation="horizontal"
+    android:padding="10dp">
 
 <LinearLayout
     android:layout_width="460dp"
@@ -42,36 +41,45 @@ android:padding="10dp">
         android:text="بلتنيب تابلا نبللاابلا ةنيبلانميبلابانىبللااةتبلؤلا ةبلىانبلةلاابلىبلىانمبللااةلنتىلاةللاانمبلىانلا بلةانم" />
 
 
-    <ImageView
-        android:id="@+id/ivDelete"
-        android:layout_width="match_parent"
-        android:layout_height="24dp"
-        android:visibility="gone"
-        android:layout_weight=".5"
-        android:src="@drawable/delete"
-        android:layout_gravity="center_vertical"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-
-        />
-    <ImageView
-        android:layout_width="match_parent"
-        android:id="@+id/ivEdit"
-        android:visibility="gone"
-        android:layout_height="24dp"
-        android:layout_weight=".5"
-        android:src="@drawable/edit"
-        android:layout_gravity="center_vertical"
-        />
 </LinearLayout>
 
-<CheckBox
-    android:layout_width="17dp"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:layout_marginRight="20dp"
-    android:layout_weight="0.1"
-    android:gravity="center" />
+    <!--<CheckBox-->
+    <!--android:layout_width="17dp"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="center"-->
+    <!--android:layout_marginRight="20dp"-->
+    <!--android:layout_weight="0.1"-->
+    <!--android:gravity="center" />-->
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginRight="20dp"
+        android:layout_weight="0.3"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/ivDelete"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/delete"
+            android:visibility="visible"
+
+            />
+
+        <ImageView
+            android:id="@+id/ivEdit"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/edit"
+            android:visibility="visible" />
+    </LinearLayout>
 </LinearLayout>
 
 
