--- a/app/src/main/res/layout/activity_indoor_photos.xml
+++ b/app/src/main/res/layout/activity_indoor_photos.xml
@@ -60,6 +60,7 @@
     android:fitsSystemWindows="true">
 
     <LinearLayout
+        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -92,18 +93,73 @@
 
 
 </android.support.design.widget.CoordinatorLayout>
-<Button
-android:id="@+id/btnSendData"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:onClick="goTONext"
-android:background="@drawable/corner"
-android:textColor="#fff"
-android:textSize="18sp"
-android:layout_alignParentBottom="true"
-android:textStyle="bold"
-android:text="التالي" />
-    </RelativeLayout>
+<!--<Button-->
+<!--android:id="@+id/btnSendData"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="wrap_content"-->
+<!--android:onClick="goTONext"-->
+<!--android:background="@drawable/corner"-->
+<!--android:textColor="#fff"-->
+<!--android:textSize="18sp"-->
+<!--android:layout_alignParentBottom="true"-->
+<!--android:textStyle="bold"-->
+<!--android:text="التالي" />-->
+
+
+    <LinearLayout
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="1dp"
+        android:background="@color/colorBlue"
+        android:layout_width="match_parent"
+        android:layout_height="60dp" >
+
+        <TextView
+            android:id="@+id/text_next_click"
+            android:layout_weight="1"
+            android:layout_marginRight="80dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:text="التالي"
+            android:textColor="@color/colorWhite"
+            android:textSize="35sp" />
+
+        <!--<ImageView-->
+        <!--android:layout_marginRight="40dp"-->
+        <!--android:layout_centerVertical="true"-->
+
+        <!--android:layout_width="40dp"-->
+        <!--android:layout_height="40dp"-->
+        <!--app:srcCompat="@drawable/ic_nexticon" />-->
+
+        <TextView
+            android:id="@+id/text_back_click"
+            android:layout_weight="1"
+            android:layout_marginRight="80dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:text="الرجوع"
+            android:textColor="@color/colorWhite"
+            android:textSize="35sp" />
+
+        <!--<TextView-->
+        <!--android:layout_marginRight="700dp"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--android:textSize="30dp"-->
+        <!--android:textColor="#fff"-->
+        <!--android:text="<"-->
+        <!--android:layout_width="40dp"-->
+        <!--android:layout_height="40dp"-->
+        <!--/>-->
+        <!---->
+
+    </LinearLayout>
+
+
+</RelativeLayout>
     </RelativeLayout>
 
     <android.support.design.widget.NavigationView
