--- a/app/src/main/res/layout/activity_notice.xml
+++ b/app/src/main/res/layout/activity_notice.xml
@@ -137,7 +137,7 @@
     <Button
         android:id="@+id/btnSendData"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:background="@drawable/corner"
         android:onClick="saveData"
@@ -145,6 +145,7 @@
         android:textColor="#fff"
         android:textSize="18sp"
         android:textStyle="bold" />
+
 </RelativeLayout>
     </RelativeLayout>
 
