--- a/app/src/main/res/layout/activity_outdoor_photos.xml
+++ b/app/src/main/res/layout/activity_outdoor_photos.xml
@@ -45,14 +45,15 @@
 
         </RelativeLayout>
 <RelativeLayout
-    android:layout_marginTop="55dp"
+    android:layout_marginTop="80dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -65,6 +66,7 @@
         >
 
         <TextView
+            android:layout_margin="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="اضافة صور للمبني من الخارج"
@@ -91,6 +93,7 @@
 
 </android.support.design.widget.CoordinatorLayout>
 <Button
+    android:visibility="gone"
 android:id="@+id/btnSendData"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
@@ -101,7 +104,61 @@ android:textSize="18sp"
 android:layout_alignParentBottom="true"
 android:textStyle="bold"
 android:text="التالي" />
-    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="1dp"
+        android:background="@color/colorBlue"
+        android:layout_width="match_parent"
+        android:layout_height="60dp" >
+
+        <TextView
+            android:id="@+id/text_next_click"
+            android:layout_weight="1"
+            android:layout_marginRight="80dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:text="التالي"
+            android:textColor="@color/colorWhite"
+            android:textSize="35sp" />
+
+        <!--<ImageView-->
+        <!--android:layout_marginRight="40dp"-->
+        <!--android:layout_centerVertical="true"-->
+
+        <!--android:layout_width="40dp"-->
+        <!--android:layout_height="40dp"-->
+        <!--app:srcCompat="@drawable/ic_nexticon" />-->
+
+        <TextView
+            android:id="@+id/text_back_click"
+            android:layout_weight="1"
+            android:layout_marginRight="80dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:text="الرجوع"
+            android:textColor="@color/colorWhite"
+            android:textSize="35sp" />
+
+        <!--<TextView-->
+        <!--android:layout_marginRight="700dp"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--android:textSize="30dp"-->
+        <!--android:textColor="#fff"-->
+        <!--android:text="<"-->
+        <!--android:layout_width="40dp"-->
+        <!--android:layout_height="40dp"-->
+        <!--/>-->
+        <!---->
+
+    </LinearLayout>
+
+
+</RelativeLayout>
     </RelativeLayout>
 
     <android.support.design.widget.NavigationView
